[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles_toolkit"
version = "0.2.0"
dependencies = []
requires-python = ">=3.12"
authors = [
  {name = "Gabriel Prates", email = "gabsprates@gmail.com"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest==9.0.2"]
